Add automatic import possibility for SNOMED international and belgian edition on application startup.